# watchdog_pi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists-from-Wxfax-chngd.txt  CMakeLists.txt  File-summary.txt  Frontend2.md  README  Read-Build.md  Testplugin-CI-CMake-v1.0.160.txt  VERSION.cmake  Watchdog.fbp  Watchman.fbp  antora.yml  appveyor-save.yml  appveyor.yml  bld.bat  build-loc.yml  build.yml  watchman.fbp
.circleci/: config-androidonly-nodeploy.yml  config-one.yml  config.yml  config.yml.bak
OLD/: README  Watchdog-old.fbp
buildosx/InstallOSX/: watchdog_pi.pkgproj.in
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh.bak  circleci-build-macos-universal.sh.bak  circleci-build-macos.sh  circleci-build-msvc.bat  circleci-build-ubuntu-docker.sh  control  travis-build-raspbian-armhf-part2.sh
cmake/: FindGTK3.cmake  PluginConfigure.cmake  PluginGL.cmake  PluginInstall.cmake  PluginJSON.cmake  PluginNMEA.cmake  PluginPackage-old.cmake  PluginPackage.cmake  PluginSetup.cmake  PluginSetup.cmake.bak  SimpleWxConfig.cmake  version.h.in
cmake/in-files/: cloudsmith-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in
doc/: watchdog.adoc
extinclude/: ODJSONSchemas.h
extinclude/GLES2/: gl2.h
include/: AIS_Target_Info.h  Alarm.h  Alarm.h.bak  ConfigurationDialog.h  EditAlarmDialog.h  NewAlarmDialog.h  WatchdogDialog.h  WatchdogPropertiesDialog.h  WatchdogUI.h  WeatherPanel.h  WindPanel.h  msvcdefs.h  pypilot_client.h  signalk_client.h  signalk_client.h.bak  watchdog_pi.h  wddc.h
include/GL/: gl.h
libs/GL/: glext.h
libs/ODAPI/: CMakeLists.txt
libs/bzip2/: CMakeLists.txt
libs/glshim/: CMakeLists.txt
libs/jsoncpp/: CMakeLists.txt
libs/jsonlib/: CMakeLists.txt
libs/nmea0183/: CMakeLists.txt
libs/nmea0183-O/: CMakeLists.txt
libs/tinyxml/: CMakeLists.txt  CMakeLists.txt.bak
manual/: .gitignore  antora.yml  bldloc.yml  playbook.yml  site.yml
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/watchdog/2.4.29/: index.html  watchdog.html
manual/modules/ROOT/pages/: index.adoc
manual/public/: 404.html  index.html  sitemap.xml
manual/public/watchdog/2.4.29/: index.html  watchdog.html
manual/watchdog/: antora.yml  build.yml
manual/watchdog/modules/ROOT/pages/: index.adoc  watchdog.adoc
modules/ROOT/pages/: watchdog.adoc
msvc/: win_deps.bat
ocpninclude/: TexFont.h  nmea0183.h  nmea0183.hpp
po/: POTFILES.in  aa_ER.po  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+22 more)
src/: AIS_Target_Info.h  AboutDialog.cpp  AboutDialog.h  Alarm.cpp  Alarm.cpp.bak  Alarm.h  ConfigurationDialog.cpp  ConfigurationDialog.h  EditAlarmDialog.cpp  EditAlarmDialog.h  NewAlarmDialog.cpp  NewAlarmDialog.cpp.bak  NewAlarmDialog.h  ODAPI.h  TexFont.h  WatchdogDialog.cpp  WatchdogDialog.h  WatchdogPrefsDialog.cpp  WatchdogPrefsDialog.h  WatchdogPropertiesDialog.cpp  WatchdogUI - Copy.cpp  WatchdogUI - Copy.h  WatchdogUI.cpp  WatchdogUI.cpp.bak  WatchdogUI.h  WatchmanDialog.cpp  WatchmanDialog.h  WatchmanPrefsDialog.cpp  WatchmanPrefsDialog.h  WatchmanUI.cpp  WatchmanUI.h  icons.cpp  icons.h  pypilot_client.cpp  signalk_client.cpp  watchdog_pi.cpp  watchdog_pi.cpp.bak  watchdog_pi.h  watchman_pi.cpp  watchman_pi.h  (+3 more)
src/GL/: gl.h
src/jsoncpp/: json_reader.cpp  json_value.cpp
src/nmea0183/: mda.cpp
src/wx/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
